--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node scripts/downloadDropboxContent.js && next dev",
+    "build": "node scripts/downloadDropboxContent.js && next build",
+    "start": "node scripts/downloadDropboxContent.js && next start"
   },
   "dependencies": {
+    "cross-fetch": "^3.0.6",
+    "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
+    "dropbox": "^8.2.0",
+    "gray-matter": "^4.0.2",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0"
   }
 }
