--- a/.env.template
+++ b/.env.template
@@ -3,5 +3,8 @@
 DROPBOX_TOKEN=TODO
 DROPBOX_POSTS_FOLDER_PATH=/blog/
 SITE_ROOT_URL=https://francescodilorenzo.com
-RSS_FEED_DESCRIPTION="Francesco Di Lorenzo, software engineer and indie hacker based in Italy"
+RSS_FEED_DESCRIPTION="Francesco Di Lorenzo. Programer and Indie Hacker. Building Mailbrew in the open."
 RSS_FEED_LANGUAGE=en
+NEXT_PUBLIC_AVATAR_URL=/media/avatar.png
+NEXT_PUBLIC_HOME_TITLE="Hey, I am Francesco"
+NEXT_PUBLIC_HOME_SUBTITLE='Programmer and Indie Hacker. <br> Building <a href="https://mailbrew.com/">Mailbrew</a> in the <a href="https://twitter.com/frankdilo">open</a>.'
