--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "start": "node scripts/downloadDropboxContent.js && next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.1.0",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "dropbox": "^8.2.0",
     "gray-matter": "^4.0.2",
     "next": "10.0.4",
+    "postcss": "^8.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0"
