--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,4 @@ NEXT_PUBLIC_AVATAR_URL=/media/avatar.png
 NEXT_PUBLIC_HOME_TITLE="Hey, I am Francesco"
 NEXT_PUBLIC_HOME_SUBTITLE='Programmer and Indie Hacker. <br> Building <a href="https://mailbrew.com/">Mailbrew</a> in the <a href="https://twitter.com/frankdilo">open</a>.'
 RSS_FEED_DESCRIPTION="Francesco Di Lorenzo. Programmer and Indie Hacker. Building Mailbrew in the open."
+RSS_FEED_LANGUAGE=en
